hphp/hack/test/typecheck/global_const18.php.exp
File "global_const18.php", line 3, characters 9-14:
Expected constant expression for initializer (Parsing[1002])
File "global_const18.php", line 3, characters 11-14:
Illegal constant value (Naming[2023])
